--- a/contracts/CandidateHub.template
+++ b/contracts/CandidateHub.template
@@ -157,12 +157,10 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   function jailValidator(address operateAddress, uint256 round, uint256 fine) 
         external override onlyValidator onlyIfCandidateAddress(operateAddress) {
     uint256 indexPlus1 = operateMap[operateAddress];
-    if (indexPlus1 == 0) return;
-
     uint index_ = indexPlus1 - 1;
     Candidate storage c = candidateSet[index_];
     uint256 margin = c.margin;
-    if (margin >= dues && margin - dues >= fine) { //@openissue
+    if (margin >= dues + fine) {
       uint256 status = c.status | SET_JAIL;
       // update jailMap
       if (jailMap[operateAddress] > 0) {
