--- a/contracts/CandidateHub.template
+++ b/contracts/CandidateHub.template
@@ -142,10 +142,10 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
    @param round: The number of rounds to jail
    @param fine: The amount of deposits to slash
    @logic
-      1. if the candidate's margin is greater or equal to the sum of the candidate's fine plus 
+      1. if the candidate's margin is greater or equal to the sum of the candidate's fine plus
          the global dues
-          a. set the release round of the candidate to be the current round plus the 
-             'round' parameter (if the candidate has prior jail period - add to it 
+          a. set the release round of the candidate to be the current round plus the
+             'round' parameter (if the candidate has prior jail period - add to it
              the current 'round' parameter)
           b. subtract the fine's value from the candidate's margin
           c. and transfer the fine value to the SystemReward contarct
@@ -153,8 +153,8 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
       2. Else:
           a. remove the candidate from internal structures, and
           b. transfer the candidate's margin eth value to the SystemReward contract
-  */    
-  function jailValidator(address operateAddress, uint256 round, uint256 fine) 
+  */
+  function jailValidator(address operateAddress, uint256 round, uint256 fine)
         external override onlyValidator onlyIfCandidateAddress(operateAddress) {
     uint256 indexPlus1 = operateMap[operateAddress];
     uint index_ = indexPlus1 - 1;
@@ -193,7 +193,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   }
 
   /********************* External methods  ****************************/
-  
+
 /* @product The `turn round` workflow function
    @dev this method is called by Golang consensus engine at the end of a round
    @logic
@@ -202,14 +202,14 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
       3. update the system's round tag to the current block.timestamp divided by roundInterval
       4. reset validator flags for all candidates.
       5. create a list of all valid candidates and use it to:
-          a. fetch hash power delegated on list of the valid candidates, which is used to 
+          a. fetch hash power delegated on list of the valid candidates, which is used to
              calculate hybrid score for validators in the new round
-          b. calculate the hybrid score for all valid candidates and choose top ones to 
-             form the validator set of the new round. See the documentation of 
+          b. calculate the hybrid score for all valid candidates and choose top ones to
+             form the validator set of the new round. See the documentation of
              PledgeAgent.getHybridScore() for the details of the hybrid score calculation
       6. if a validator's hybrid score is zero - correct its commissionThousandths value to be 1000
       7. call ValidatorSet's updateValidatorSet() to set the new validators
-      8. clean slash contract decreasing validators' accrued slash indicator points by the system's 
+      8. clean slash contract decreasing validators' accrued slash indicator points by the system's
          per-round point reduction rate
       9. notify PledgeAgent contract of the new round and the new validators
       10. remove validators from jail if their jailedRound is <= than the new roundTag
@@ -218,7 +218,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     // distribute rewards for the about to end round
     address[] memory lastCandidates = IValidatorSet(VALIDATOR_CONTRACT_ADDR).distributeReward();
 
-    // fetch BTC miners who delegated hash power in the about to end round; 
+    // fetch BTC miners who delegated hash power in the about to end round;
     // and distribute rewards to them
     uint256 lastCandidateSize = lastCandidates.length;
     for (uint256 i = 0; i < lastCandidateSize; i++) {
@@ -260,7 +260,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     // which is used to calculate hybrid score for validators in the new round
     powers = ILightClient(LIGHT_CLIENT_ADDR).getRoundPowers(roundTag-7, candidates);
 
-    // calculate the hybrid score for all valid candidates and 
+    // calculate the hybrid score for all valid candidates and
     // choose top ones to form the validator set of the new round
     (uint256[] memory scores, uint256 totalPower, uint256 totalCoin) =
       IPledgeAgent(PLEDGE_AGENT_ADDR).getHybridScore(candidates, powers);
@@ -274,8 +274,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
 
     for (uint256 i = 0; i < totalCount; ++i) {
       uint256 indexPlus1 = operateMap[validatorList[i]];
-      uint index_ = indexPlus1 - 1;
-      Candidate storage c = candidateSet[index_];
+      Candidate storage c = candidateSet[indexPlus1-1];
       consensusAddrList[i] = c.consensusAddr;
       feeAddrList[i] = c.feeAddr;
       if (scores[i] == 0) {
@@ -283,7 +282,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
       } else {
         commissionThousandthsList[i] = c.commissionThousandths;
       }
-      statusList[index_] |= SET_VALIDATOR;
+      statusList[indexPlus1-1] |= SET_VALIDATOR;
     }
 
     IValidatorSet(VALIDATOR_CONTRACT_ADDR).updateValidatorSet(validatorList, consensusAddrList, feeAddrList, commissionThousandthsList);
@@ -295,8 +294,9 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     IPledgeAgent(PLEDGE_AGENT_ADDR).setNewRound(validatorList, totalPower, totalCoin, roundTag);
 
     // update validator jail status
+    address opAddr; // avoiding 'Stack too deep'
     for (uint256 i = 0; i < candidateSize; i++) {
-      address opAddr = candidateSet[i].operateAddr;
+      opAddr = candidateSet[i].operateAddr;
       uint256 jailedRound = jailMap[opAddr];
       if (jailedRound != 0 && jailedRound <= roundTag) {
         statusList[i] = statusList[i] & DEL_JAIL;
@@ -310,7 +310,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   }
 
   /****************** register/unregister ***************************/
-  
+
 /* @product Called by a non-validator address aiming to become a validator candidate on the Core blockchain
    @param consensusAddr: Consensus address configured on the validator node
    @param feeAddr: Fee address set to collect system rewards
@@ -319,12 +319,12 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
         1. Apply the following verifications:
               a. Verify that the candidate limit of CANDIDATE_COUNT_LIMIT (=1000) was not reached
               b. No double-booking: Verifies that the candidate is not already registered
-              c. Verify that the ether sum carried by this Tx is >= the global 
+              c. Verify that the ether sum carried by this Tx is >= the global
                  requiredMargin value
               d. Verify that the commissionThousandths value is in the open range (0, 1000)
               e. Verify that the consensusAddr has not been registered before
               f. Verify that the fee address is valid
-              g. Verify that the Tx sender is not jailed, or that his jail time has ended 
+              g. Verify that the Tx sender is not jailed, or that his jail time has ended
                  before current roundTag
         2. And, if all of these tests have passed - register the validator candidate into the system
  */
@@ -350,11 +350,11 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
 
   /* @product Unregister the validator candidate role on Core blockchain
      @logic
-      1. if candidate margin exceeds global dues value - transfer the difference to the 
+      1. if candidate margin exceeds global dues value - transfer the difference to the
          candidate and the dues value to the system reward contract
-      2. if candidate margin does not exceed global dues value - only transfer the margin 
+      2. if candidate margin does not exceed global dues value - only transfer the margin
          value to the system reward contract
-  */ 
+  */
   function unregister() external nonReentrant onlyInit onlyIfCandidate {
     uint256 indexPlus1 = operateMap[msg.sender];
     uint index_ = indexPlus1 - 1;
@@ -376,7 +376,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   /// Update validator candidate information
   /// @param consensusAddr Consensus address configured on the validator node
   /// @param feeAddr Fee address set to collect system rewards
-  /// @param commissionThousandths The commission fee taken by the validator, measured in thousandths  
+  /// @param commissionThousandths The commission fee taken by the validator, measured in thousandths
   function update(address consensusAddr, address payable feeAddr, uint32 commissionThousandths) external onlyInit onlyIfCandidate {
     require(commissionThousandths != 0 && commissionThousandths < 1000, "commissionThousandths should in range (0, 1000)");
     require(consensusAddr != address(0), "consensus address should not be zero");
@@ -427,10 +427,10 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
   }
 
 /* @product Called by a candidate to add refundable deposits
-   Motivation: Candidate will not be elected if there are not enough deposits 
+   Motivation: Candidate will not be elected if there are not enough deposits
    @logic
       1. Tx eth value (must be >0) will be appended to candidate's margin value
-      2. If the new candidate's margin value exceeds or is equal to the global requiredMargin 
+      2. If the new candidate's margin value exceeds or is equal to the global requiredMargin
          value - the candidate will be promoted to be a validator
 */
   function addMargin() external payable onlyInit onlyIfCandidate {
@@ -457,7 +457,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     }
   }
 
-/* @product internal function for candidate removal, called by other CandidateHub 
+/* @product internal function for candidate removal, called by other CandidateHub
    functions in the flows of jailing or unregistering candidates
    @logic
       2. Candidate gets removed from contract internal structures
@@ -568,7 +568,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     emit paramChange(key, value);
   }
 
-  /// Get list of validator candidates 
+  /// Get list of validator candidates
   /// @return List of operator addresses
   function getCandidates() external view returns (address[] memory) {
     uint256 candidateSize = candidateSet.length;
@@ -579,7 +579,7 @@ contract CandidateHub is ICandidateHub, System, IParamSubscriber {
     return opAddrs;
   }
 
-  /// Whether the input address is operator address of a validator candidate 
+  /// Whether the input address is operator address of a validator candidate
   /// @param operateAddr Operator address of validator candidate
   /// @return true/false
   function isCandidateByOperate(address operateAddr) external view returns (bool) {
