--- a/contracts/GovHub.template
+++ b/contracts/GovHub.template
@@ -32,7 +32,7 @@ contract GovHub is System, IParamSubscriber {
 
   event paramChange(string key, bytes value);
   event receiveDeposit(address indexed from, uint256 amount);
-  event VoteCast(address voter, uint256 proposalId, bool support);
+  event VoteCast(address indexed voter, uint256 indexed proposalId, bool indexed support); 
   event ProposalCreated(
     uint256 id,
     address proposer,
@@ -66,7 +66,7 @@ contract GovHub is System, IParamSubscriber {
     uint256 totalVotes;
     bool canceled;
     bool executed;
-    mapping(address => Receipt) receipts;
+    mapping(address => Receipt) receipts; //@openissue
   }
 
   struct Receipt {
@@ -110,7 +110,7 @@ contract GovHub is System, IParamSubscriber {
     _;
   }
 
-  function init() external onlyNotInit {
+  function init() external onlyNotInit { //see @dev:init
     proposalMaxOperations = PROPOSAL_MAX_OPERATIONS;
     votingPeriod = VOTING_PERIOD;
     executingPeriod = EXECUTING_PERIOD;
@@ -166,7 +166,7 @@ contract GovHub is System, IParamSubscriber {
       );
     }
 
-    uint256 startBlock = block.number + 1;
+    uint256 startBlock = block.number + 1; //@openissue
     uint256 endBlock = startBlock + votingPeriod;
 
     proposalCount++;
@@ -213,8 +213,9 @@ contract GovHub is System, IParamSubscriber {
       3. the sender's vote is verified to be not yet cast yet else the Tx reverts
       4. the sender's vote is executed by incrementing the proposal's for or against counter
       5. the sender is marked as having voted
+      6. note that by design a voter will not be allowed to change his original vote
 */
-  function castVote(uint256 proposalId, bool support) 
+  function castVote(uint256 proposalId, bool support) //@openissue
         public onlyInit onlyMember onlyIfActiveProposal(proposalId) {    
     Proposal storage proposal = proposals[proposalId];
     Receipt storage receipt = proposal.receipts[msg.sender];
@@ -243,7 +244,7 @@ contract GovHub is System, IParamSubscriber {
 
   /// Execute the proposal
   /// @param proposalId The proposal Id
-  function execute(uint256 proposalId) public payable onlyInit onlyIfSuccessfulProposal(proposalId) {
+  function execute(uint256 proposalId) public payable nonReentrant onlyInit onlyIfSuccessfulProposal(proposalId) {
     Proposal storage proposal = proposals[proposalId];
     proposal.executed = true;
     uint256 targetSize = proposal.targets.length;
@@ -254,10 +255,11 @@ contract GovHub is System, IParamSubscriber {
       } else {
         callData = abi.encodePacked(bytes4(keccak256(bytes(proposal.signatures[i]))), proposal.calldatas[i]);
       }
-
-      (bool success, bytes memory returnData) = proposal.targets[i].call{ value: proposal.values[i] }(callData);
+      require(address(this).balance >= proposal.values[i], "not enough balance");
+      address _target = proposal.targets[i];
+      (bool success, bytes memory returnData) = _target.call{ value: proposal.values[i] }(callData); //@dev:unsafe(DoS+reentry)
       require(success, "Transaction execution reverted.");
-      emit ExecuteTransaction(proposal.targets[i], proposal.values[i], proposal.signatures[i], proposal.calldatas[i]);
+      emit ExecuteTransaction(_target, proposal.values[i], proposal.signatures[i], proposal.calldatas[i]);
     }
     emit ProposalExecuted(proposalId);
   }
@@ -300,7 +302,7 @@ contract GovHub is System, IParamSubscriber {
     } else if (block.number > proposal.endBlock + executingPeriod) {
       return ProposalState.Expired;
     } else {
-      return ProposalState.Succeeded;
+      return ProposalState.Succeeded; //@openissue
     }
   }
 
@@ -321,13 +323,14 @@ contract GovHub is System, IParamSubscriber {
 
   /// Remove a member
   /// @param member The address of the member to remove
-  function removeMember(address member) external onlyInit onlyGov onlyIfMember(member) {
+  function removeMember(address member) external onlyInit onlyGov onlyIfMember(member) { //@openissue
     require(memberSet.length > 5, "at least five members in DAO");
-    uint256 index = members[member];
-    if (index != memberSet.length) {
+    uint256 indexPlus1 = members[member]; //@openissue
+    if (indexPlus1 != memberSet.length) {
+      uint index_ = indexPlus1 - 1;
       address addr = memberSet[memberSet.length - 1];
-      memberSet[index - 1] = addr;
-      members[addr] = index;
+      memberSet[index_] = addr;
+      members[addr] = indexPlus1;
     }
     memberSet.pop();
     delete members[member];
