--- a/contracts/System.template
+++ b/contracts/System.template
@@ -3,9 +3,10 @@ pragma solidity 0.8.4;
 
 import "./interface/IRelayerHub.sol";
 
-contract System {
+abstract contract System {
 
   bool public alreadyInit;
+  bool public s_guardIsActive;
 
 {% if mock %}
   address public VALIDATOR_CONTRACT_ADDR;
@@ -68,7 +69,7 @@ contract System {
     _;
   }
 
-  modifier onlyNotInit() {
+  modifier onlyNotInit() { //@openissue
     require(!alreadyInit, "the contract already init");
     _;
   }
@@ -110,6 +111,13 @@ contract System {
 
   modifier openForAll() {_;}
 
+  modifier nonReentrant() {
+    require(!s_guardIsActive, "reentrancy detected");
+    s_guardIsActive = true;
+    _;
+    s_guardIsActive = false;
+  }
+
   /// The length of param mismatch. Default is 32 bytes.
   /// @param name the name of param.
   error MismatchParamLength(string name);
@@ -121,4 +129,12 @@ contract System {
   /// @param lowerBound requested lower bound of the param.
   /// @param upperBound requested upper bound of the param
   error OutOfBounds(string name, uint256 given, uint256 lowerBound, uint256 upperBound);
+
+  /* @dev:init
+        the init() functions are 'historical' in the sense that they were called once upon platform-contract's 
+        initial deployment and will never be called again including not upon updates. If maliciously called, 
+        the onlyNotInit() modifier should immediately revert.
+        also, since they do not carry parameters the identity of their original caller was irrelevant - hence no 
+        ownerOnly or similar access modifier was set
+   */
 }
